# NewreslutPoject

./: .gitignore  CMakeLists.txt  README.md  note.md
Data/: budget.json  users.json
include/: AuthManager.hpp  BudgetManager.hpp  Transaction.hpp
src/: AuthManager.cpp  BudgetManager.cpp  Transaction.cpp  main.cpp
